5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1637_1053.log
== TEST (2019-04-11 11:29:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
capivara = input("gjh:")

if(animal=="cervo"):
	print("cervo eh patrono de Harry Potter")
else:
	print("capivara nao eh patrono de Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(animal=="cervo"):
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:29:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
capivara = input("gjh:")

if(animal=="cervo"):
	print("cervo eh patrono de Harry Potter")
else:
	print("capivara nao eh patrono de Harry Potter")
-- EXECUTION TIME:
0.145431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/1053/main.py", line 6, in <module>
    if(animal=="cervo"):
NameError: name 'animal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:50:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
animal = input("gjh:")

if(animal=="cervo"):
	print("cervo eh patrono de Harry Potter")
else:
	print(animal, "nao eh patrono de Harry Potter")
-- EXECUTION TIME:
0.238274
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
gjh:cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
gjh:bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:50:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
animal = input("gjh:")

if(animal=="cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(animal, "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.203221
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
